[package]
name = "water_ball_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.2"
indicatif = "0.18.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }